public static class GlobalConstants
{
    public const string ScoreText = "Score: ";
    public const string RunAnimation = "Run";
    public const string DeadAnimation = "Dead";
    public const string JumpAnimation = "Jump";
    public const string HorizontalAxis = "Horizontal";
    public const string VerticalAxis = "Vertical";
    public const string GroundTag = "Ground";
    public const string ObstacleTag = "Obstacle";
    public const float PositionBehindPlayerAxisZ = -12;
    public const float ClipVolume = 0.5f;
    public const float AddPointsDelay = 0.5f;
    public const int OneScorePoint = 1;
    public const int ShipsWorth = 20;
    public const float CorrectiveOffset = 0.098f;
    public const int ScoreStep = 100;
    public const float SpeedIncrease = 1f;
    public const float MinimumSpaceshipSpawningDelay = 0.3f;
    public const float MinimumObstacleSpawningDelay = 0.2f;
    public const float SpawningDelayDecreaser = 0.05f;
    public const float StagePostitionOffset = 14.91158f;
    public const int ChanceForRoadblock = 80;
    public const int HundredPercent = 100;
    public const int ZeroPercent = 0;
    public const int RoadblockIndex = 0;
    public const int DoubleConeIndex = 1;
}
